--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e21486; }
+  background: #52f76c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a89666; }
+  background: #1c48c3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4bc6af; }
+  background: #7731e4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #61f659; }
+  background: #e8fd79; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d7297f; }
+  background: #779878; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #26a562; }
+  background: #75b34b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d0c1af; }
+  background: #606b9b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f3c71f; }
+  background: #23f8f3; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #54c512; }
+  background: #3e73c4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #22c377; }
+  background: #5e13fc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4da0f2; }
+  background: #123ed5; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e3be2c; }
+  background: #921326; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #deabcb; }
+  background: #906537; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #259624; }
+  background: #696d68; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0675a2; }
+  background: #69c007; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3f414e; }
+  background: #89c3cc; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ab0edb; }
+  background: #49eb12; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f420dd; }
+  background: #b76606; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1869b7; }
+  background: #b39dfb; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d06208; }
+  background: #b9815a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a01a36; }
+  background: #a6d6b9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #70992a; }
+  background: #3fb34a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #70d724; }
+  background: #e4cbe0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0535e5; }
+  background: #e93481; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6d58e7; }
+  background: #eb3e39; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #05dbc2; }
+  background: #0a66c6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #0dcf61; }
+  background: #8c5178; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #76e5d3; }
+  background: #f8954c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e036da; }
+  background: #6bb6f8; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #207758; }
+  background: #52b810; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #dfcffb; }
+  background: #051aec; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9d29e9; }
+  background: #acc215; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #91cf1d; }
+  background: #471147; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8d5517; }
+  background: #905236; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a74da6; }
+  background: #815229; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2cd071; }
+  background: #f49031; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #628dfe; }
+  background: #04fb57; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #89c26f; }
+  background: #896269; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #607f52; }
+  background: #5338c8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5b8b01; }
+  background: #bfc7a5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9aac7d; }
+  background: #0d1c64; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #eae813; }
+  background: #6f6d44; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #cd844a; }
+  background: #5b88a6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #07b240; }
+  background: #19a55a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #57b519; }
+  background: #d46215; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #662fa8; }
+  background: #013597; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d35692; }
+  background: #f55665; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #97b7ad; }
+  background: #612bc9; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3d76c6; }
+  background: #8661a3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #034491; }
+  background: #147234; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #20ee5b; }
+  background: #b7c79f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b74705; }
+  background: #3dbba9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #3875a3; }
+  background: #927696; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #81c706; }
+  background: #a12b35; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #fcc89c; }
+  background: #44221d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #7c7580; }
+  background: #9e9303; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #817d5a; }
+  background: #e121d6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #74b14c; }
+  background: #acd6f5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0e59b4; }
+  background: #290eae; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #768a41; }
+  background: #92e0c3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #297e7f; }
+  background: #2a6b46; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a0f8d5; }
+  background: #b5f374; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #451c13; }
+  background: #c90993; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9ee9e7; }
+  background: #37a954; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7881e5; }
+  background: #0ffe13; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7683cf; }
+  background: #4e62f7; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #718a18; }
+  background: #f18643; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e7ebf3; }
+  background: #c79f22; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5d8582; }
+  background: #6124bb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #aceb03; }
+  background: #2aed54; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9af6a9; }
+  background: #b9ae06; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #fac9d2; }
+  background: #976ca7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #587c9c; }
+  background: #3805cb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f96108; }
+  background: #9af428; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #651d26; }
+  background: #46c165; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #062651; }
+  background: #c9f6a2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9c026c; }
+  background: #dad990; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c0cff4; }
+  background: #a69f9e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1a8fad; }
+  background: #958035; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #183c93; }
+  background: #9ac9b9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2fcf78; }
+  background: #0f5b1a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #557a69; }
+  background: #aff867; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #38acb6; }
+  background: #110ce0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #34ccd9; }
+  background: #26b9d8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #efa7ea; }
+  background: #912950; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9380b3; }
+  background: #609b6e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #bd29a0; }
+  background: #f0b6e8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #def5e1; }
+  background: #477e14; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a6e9cd; }
+  background: #6ba288; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #78bd3b; }
+  background: #40d8af; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #378a64; }
+  background: #2ef26e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #65c59c; }
+  background: #a9e47e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #671024; }
+  background: #8537e5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #292743; }
+  background: #320fa5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #72a330; }
+  background: #86aa48; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #af5fc9; }
+  background: #ff5450; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5a392f; }
+  background: #a5761d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8243f7; }
+  background: #fbda9f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b45890; }
+  background: #e7d49d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #05ed80; }
+  background: #12d5f8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16817,6 +16817,21 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .select-arrow-div .custom-select {
   background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 15px !important; }
+
+.number-type-arrows {
+  position: relative; }
+
+.number-type-arrows .greater-arrow {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  cursor: pointer; }
+
+.number-type-arrows .less-arrow {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  cursor: pointer; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
