--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4944,3 +4944,19 @@ height: 300px;
 .select-arrow-div .custom-select {
   background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 15px !important;
 }
+
+.number-type-arrows {
+  position: relative;
+}
+.number-type-arrows .greater-arrow {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  cursor: pointer;
+}
+.number-type-arrows .less-arrow {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  cursor: pointer;
+}
