--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #52f76c; }
+  background: #60fdf5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1c48c3; }
+  background: #184562; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7731e4; }
+  background: #841799; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e8fd79; }
+  background: #6b1e85; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #779878; }
+  background: #a98f3c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #75b34b; }
+  background: #7862b3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #606b9b; }
+  background: #a90ba8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #23f8f3; }
+  background: #82c7e0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3e73c4; }
+  background: #691de0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5e13fc; }
+  background: #44a4f1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #123ed5; }
+  background: #6348f4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #921326; }
+  background: #40ed03; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #906537; }
+  background: #af89d7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #696d68; }
+  background: #a820d9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #69c007; }
+  background: #7c4a10; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #89c3cc; }
+  background: #701f5f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #49eb12; }
+  background: #f9be02; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b76606; }
+  background: #1b18f4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b39dfb; }
+  background: #e97696; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b9815a; }
+  background: #49cead; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a6d6b9; }
+  background: #3c20ab; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3fb34a; }
+  background: #6018c3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e4cbe0; }
+  background: #659415; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e93481; }
+  background: #bd3e86; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #eb3e39; }
+  background: #d3685d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0a66c6; }
+  background: #41a242; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8c5178; }
+  background: #cfe202; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f8954c; }
+  background: #f6d032; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6bb6f8; }
+  background: #2bcf3b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #52b810; }
+  background: #472fc7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #051aec; }
+  background: #ba7ce0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #acc215; }
+  background: #7a1c1b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #471147; }
+  background: #a90216; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #905236; }
+  background: #6fcccd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #815229; }
+  background: #4085d8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f49031; }
+  background: #43cd5e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #04fb57; }
+  background: #ad3b8f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #896269; }
+  background: #2a229d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5338c8; }
+  background: #c16439; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bfc7a5; }
+  background: #c80c6f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0d1c64; }
+  background: #97b2c7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6f6d44; }
+  background: #84ff53; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5b88a6; }
+  background: #dd16d5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #19a55a; }
+  background: #6ddaab; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d46215; }
+  background: #3f0401; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #013597; }
+  background: #5353f1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f55665; }
+  background: #76be81; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #612bc9; }
+  background: #737d48; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8661a3; }
+  background: #8abf9c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #147234; }
+  background: #97c1e7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b7c79f; }
+  background: #c9285b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3dbba9; }
+  background: #106582; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #927696; }
+  background: #bb4c91; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a12b35; }
+  background: #d60387; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #44221d; }
+  background: #d7d3fa; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9e9303; }
+  background: #661a5e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #e121d6; }
+  background: #0cf58d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #acd6f5; }
+  background: #0ce4d2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #290eae; }
+  background: #a2caca; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #92e0c3; }
+  background: #f3f105; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2a6b46; }
+  background: #644fcb; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b5f374; }
+  background: #c8ae92; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c90993; }
+  background: #92e34b; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #37a954; }
+  background: #65e267; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0ffe13; }
+  background: #eb1bd9; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4e62f7; }
+  background: #a53148; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f18643; }
+  background: #415443; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c79f22; }
+  background: #0a93d7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6124bb; }
+  background: #33dbb2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2aed54; }
+  background: #5974e2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b9ae06; }
+  background: #17ad6c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #976ca7; }
+  background: #bfe96d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3805cb; }
+  background: #9f4fcb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9af428; }
+  background: #09836b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #46c165; }
+  background: #51dedd; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c9f6a2; }
+  background: #f061d2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #dad990; }
+  background: #9183d0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a69f9e; }
+  background: #3fbebc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #958035; }
+  background: #07929d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9ac9b9; }
+  background: #8f5123; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0f5b1a; }
+  background: #913306; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #aff867; }
+  background: #96a06e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #110ce0; }
+  background: #6535f7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #26b9d8; }
+  background: #df8ea4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #912950; }
+  background: #039035; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #609b6e; }
+  background: #84b2ff; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f0b6e8; }
+  background: #e85f39; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #477e14; }
+  background: #8be0b2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6ba288; }
+  background: #5f4d65; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #40d8af; }
+  background: #6125fe; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2ef26e; }
+  background: #6fedc0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a9e47e; }
+  background: #067a22; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8537e5; }
+  background: #067f7d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #320fa5; }
+  background: #46afce; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #86aa48; }
+  background: #5e631c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ff5450; }
+  background: #bea31c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a5761d; }
+  background: #a320e2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fbda9f; }
+  background: #f98aa3; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e7d49d; }
+  background: #4aac90; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #12d5f8; }
+  background: #ebf9b8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
