--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #60fdf5; }
+  background: #235a5e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #184562; }
+  background: #978701; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #841799; }
+  background: #19c1a8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6b1e85; }
+  background: #5fd482; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a98f3c; }
+  background: #87080b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7862b3; }
+  background: #16e365; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a90ba8; }
+  background: #d5653c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #82c7e0; }
+  background: #3353b4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #691de0; }
+  background: #756f11; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #44a4f1; }
+  background: #3a1b58; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6348f4; }
+  background: #c277c2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #40ed03; }
+  background: #d108e0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #af89d7; }
+  background: #583670; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a820d9; }
+  background: #553d5b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7c4a10; }
+  background: #6fc83d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #701f5f; }
+  background: #81cda7; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f9be02; }
+  background: #e92039; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1b18f4; }
+  background: #12fff3; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e97696; }
+  background: #8fb63e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #49cead; }
+  background: #c72192; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3c20ab; }
+  background: #c801c0; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6018c3; }
+  background: #156a74; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #659415; }
+  background: #4e4ec9; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bd3e86; }
+  background: #a602b3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d3685d; }
+  background: #5c54f6; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #41a242; }
+  background: #77a3b8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cfe202; }
+  background: #fab720; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f6d032; }
+  background: #becc16; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2bcf3b; }
+  background: #b9be1c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #472fc7; }
+  background: #f3c404; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ba7ce0; }
+  background: #7876e4; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7a1c1b; }
+  background: #91a8ba; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a90216; }
+  background: #7d6ade; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6fcccd; }
+  background: #d584de; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4085d8; }
+  background: #b5c303; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #43cd5e; }
+  background: #a3d36a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ad3b8f; }
+  background: #9a9471; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2a229d; }
+  background: #93d0f4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c16439; }
+  background: #fd219f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c80c6f; }
+  background: #f5237b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #97b2c7; }
+  background: #ecc0cf; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #84ff53; }
+  background: #53900b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #dd16d5; }
+  background: #350545; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6ddaab; }
+  background: #87e6e4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3f0401; }
+  background: #9ca38b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5353f1; }
+  background: #93679b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #76be81; }
+  background: #120a9b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #737d48; }
+  background: #4482cb; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8abf9c; }
+  background: #88256c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #97c1e7; }
+  background: #cccc76; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c9285b; }
+  background: #254cb6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #106582; }
+  background: #4e513d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bb4c91; }
+  background: #ba6aaf; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d60387; }
+  background: #9b6705; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d7d3fa; }
+  background: #182ac9; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #661a5e; }
+  background: #6208fb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0cf58d; }
+  background: #ee71ab; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0ce4d2; }
+  background: #8723b6; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a2caca; }
+  background: #a33ae3; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f3f105; }
+  background: #678e77; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #644fcb; }
+  background: #ca7af0; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c8ae92; }
+  background: #b82917; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #92e34b; }
+  background: #e92c02; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #65e267; }
+  background: #d84504; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #eb1bd9; }
+  background: #f259d2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a53148; }
+  background: #0dde6e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #415443; }
+  background: #f4ec7a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0a93d7; }
+  background: #d5d796; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #33dbb2; }
+  background: #437ef9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5974e2; }
+  background: #90820c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #17ad6c; }
+  background: #4aeb7a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bfe96d; }
+  background: #bf6340; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9f4fcb; }
+  background: #42cfd7; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #09836b; }
+  background: #5ac94a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #51dedd; }
+  background: #fcf042; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f061d2; }
+  background: #bade99; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9183d0; }
+  background: #923ae6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3fbebc; }
+  background: #0bff4a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #07929d; }
+  background: #8bc982; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8f5123; }
+  background: #73fd06; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #913306; }
+  background: #b124b1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #96a06e; }
+  background: #b54c01; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6535f7; }
+  background: #326bba; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #df8ea4; }
+  background: #67cffd; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #039035; }
+  background: #dba427; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #84b2ff; }
+  background: #b7462a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e85f39; }
+  background: #63db2c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8be0b2; }
+  background: #58a7b7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5f4d65; }
+  background: #cdec19; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6125fe; }
+  background: #52ef85; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6fedc0; }
+  background: #5e25f2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #067a22; }
+  background: #7ae2aa; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #067f7d; }
+  background: #54c9a6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #46afce; }
+  background: #f2c01e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5e631c; }
+  background: #8393b1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bea31c; }
+  background: #6fdef2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a320e2; }
+  background: #3783c9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f98aa3; }
+  background: #aadcfa; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4aac90; }
+  background: #ea9d2e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ebf9b8; }
+  background: #91cc6f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
