--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #235a5e; }
+  background: #dd1667; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #978701; }
+  background: #5825f9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #19c1a8; }
+  background: #3e3242; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5fd482; }
+  background: #c38d3e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #87080b; }
+  background: #1c4fbe; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #16e365; }
+  background: #189f85; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d5653c; }
+  background: #631b5f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3353b4; }
+  background: #6cadcd; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #756f11; }
+  background: #b71c45; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3a1b58; }
+  background: #602d21; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c277c2; }
+  background: #5eaa58; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d108e0; }
+  background: #ac65fe; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #583670; }
+  background: #49fe4d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #553d5b; }
+  background: #67f075; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6fc83d; }
+  background: #e8dff1; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #81cda7; }
+  background: #457733; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e92039; }
+  background: #f2047e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #12fff3; }
+  background: #e7e709; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8fb63e; }
+  background: #d91458; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c72192; }
+  background: #c8281d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c801c0; }
+  background: #b3c2bf; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #156a74; }
+  background: #28ed39; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4e4ec9; }
+  background: #9142da; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a602b3; }
+  background: #816f47; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5c54f6; }
+  background: #8c1b36; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #77a3b8; }
+  background: #3ff8b7; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #fab720; }
+  background: #158583; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #becc16; }
+  background: #8f9ada; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b9be1c; }
+  background: #232720; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f3c404; }
+  background: #46da76; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7876e4; }
+  background: #5a069b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #91a8ba; }
+  background: #61b4c7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7d6ade; }
+  background: #b4f120; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d584de; }
+  background: #6996ba; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b5c303; }
+  background: #c96c7c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a3d36a; }
+  background: #0697fe; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9a9471; }
+  background: #f659f9; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #93d0f4; }
+  background: #2140f3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fd219f; }
+  background: #318d2c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f5237b; }
+  background: #83d5e8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ecc0cf; }
+  background: #9057fb; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #53900b; }
+  background: #4dec52; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #350545; }
+  background: #bea503; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #87e6e4; }
+  background: #2c4971; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9ca38b; }
+  background: #65a140; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #93679b; }
+  background: #6bcfa7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #120a9b; }
+  background: #99937c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4482cb; }
+  background: #2ef27f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #88256c; }
+  background: #8689df; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cccc76; }
+  background: #bd618b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #254cb6; }
+  background: #102337; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4e513d; }
+  background: #bead41; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ba6aaf; }
+  background: #a8306c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9b6705; }
+  background: #f9dcb8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #182ac9; }
+  background: #59be04; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6208fb; }
+  background: #e69a1a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ee71ab; }
+  background: #ccede2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8723b6; }
+  background: #f707fe; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a33ae3; }
+  background: #bc5deb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #678e77; }
+  background: #07c93b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ca7af0; }
+  background: #14d62c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b82917; }
+  background: #d57983; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e92c02; }
+  background: #371343; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d84504; }
+  background: #f0cb51; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f259d2; }
+  background: #f91909; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0dde6e; }
+  background: #dacb04; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f4ec7a; }
+  background: #fe2fb1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d5d796; }
+  background: #39b163; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #437ef9; }
+  background: #ebc54b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #90820c; }
+  background: #97bc72; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #4aeb7a; }
+  background: #434577; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bf6340; }
+  background: #b2aca6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #42cfd7; }
+  background: #cb6573; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5ac94a; }
+  background: #d38f85; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fcf042; }
+  background: #242bf4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #bade99; }
+  background: #70dabf; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #923ae6; }
+  background: #d47c6b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0bff4a; }
+  background: #2ac80c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8bc982; }
+  background: #59beae; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #73fd06; }
+  background: #5eb666; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b124b1; }
+  background: #d59726; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b54c01; }
+  background: #c30d99; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #326bba; }
+  background: #841136; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #67cffd; }
+  background: #1ccf32; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #dba427; }
+  background: #a66743; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b7462a; }
+  background: #cde3cd; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #63db2c; }
+  background: #a35f93; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #58a7b7; }
+  background: #9beb1c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cdec19; }
+  background: #cd46e8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #52ef85; }
+  background: #d5d79e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5e25f2; }
+  background: #57215b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7ae2aa; }
+  background: #f13474; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #54c9a6; }
+  background: #d223c4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f2c01e; }
+  background: #c6ce24; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8393b1; }
+  background: #617bd1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6fdef2; }
+  background: #8f2ff6; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3783c9; }
+  background: #d72b83; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #aadcfa; }
+  background: #78a613; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ea9d2e; }
+  background: #0f8bdb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #91cc6f; }
+  background: #15ccf3; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16832,6 +16832,12 @@ input:not(:checked) + .slider-switch > .switch-non {
   right: 8px;
   bottom: 8px;
   cursor: pointer; }
+
+.w-60 {
+  width: 60%; }
+
+.result-title {
+  font-size: 36px !important; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
