--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4960,3 +4960,9 @@ height: 300px;
   bottom: 8px;
   cursor: pointer;
 }
+.w-60 {
+  width: 60%;
+}
+.result-title {
+  font-size: 36px !important;
+}
